cmake_minimum_required(VERSION 3.23)
project(C_HDOJ C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(C_HDOJ
        HDOJ1000.c
        HDOJ1005.c
        HDOJ1008.c
        HDOJ1021.c
        HDOJ1061.c
        HDOJ1089.c
        HDOJ1090.c
        HDOJ1091.c
        HDOJ1092.c
        HDOJ1093.c
        HDOJ1094.c
        HDOJ1095.c
        HDOJ1096.c
        HDOJ1108.c
        HDOJ1205.c
        HDOJ1215.c
        "HDOJ1297(give up).c"
        HDOJ1465.c
        HDOJ2000.c
        HDOJ2001.c
        HDOJ2002.c
        HDOJ2003.c
        HDOJ2004.c
        HDOJ2005.c
        HDOJ2006.c
        HDOJ2007.c
        HDOJ2008.c
        HDOJ2009.c
        HDOJ2010.c
        HDOJ2011.c
        HDOJ2012.c
        HDOJ2013.c
        HDOJ2014.c
        HDOJ2015.c
        HDOJ2016.c
        HDOJ2017.c
        HDOJ2018.c
        HDOJ2019.c
        HDOJ2020.c
        HDOJ2021.c
        HDOJ2022.c
        HDOJ2023.c
        HDOJ2024.c
        HDOJ2025.c
        HDOJ2026.c
        HDOJ2027.c
        HDOJ2028.c
        HDOJ2029.c
        HDOJ2030.c
        HDOJ2031.c
        HDOJ2032.c
        HDOJ2033.c
        HDOJ2035.c
        HDOJ2046.c
        HDOJ2050.c)
